end of day 6/21

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -81,6 +81,7 @@
 // Templates
 @import "templates/front";
 @import "templates/kitchen-sink";
+@import "templates/home";
 
 // Custom Styles
 @import "styles.scss";
