--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -6,3 +6,149 @@
   border-radius: 3px;
   border: none;
 }
+
+/* -------------------------------------O--------------------------------------------------------------------------------BUTTONS--------------------- */
+/* BUTTONS */
+/* button styling */
+a.blue-button,
+a.yellow-button,
+a.yellow-button-small,
+a.blue-button-small {
+    -webkit-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+}
+
+a.blue-button {
+    margin: 20px 0;
+    padding: 10px 70px;
+    color: #23408e;
+    text-align: center;
+    border: 4px #23408e solid;
+}
+
+a.yellow-button {
+    margin: 20px 0;
+    width: 100%;
+    height: 100%;
+    padding: 10px 70px;
+    color: #ffc52a;
+    text-align: center;
+    border: 4px #ffc52a solid;
+}
+
+
+a.yellow-button-small {
+    margin: 20px 0;
+    padding: 6px 50px;
+    font-size: 0.75em;
+    color: white;
+    text-align: center;
+    background-color: #ffc52a;
+}
+
+a.yellow-button.yellow-button-solid {
+    background-color: rgba(255,197,42,0.7);
+    color: #303030;
+}
+
+a.yellow-button:hover,
+a.yellow-button-small:hover,
+a.yellow-button:focus,
+a.yellow-button-small:focus {
+    background-color: #ffc52a;
+    color: #303030;
+}
+
+a.blue-button:hover,
+a.blue-button:focus {
+    background-color: #23408e;
+    color: white;
+}
+
+#next-button,
+#prev-button {
+    margin: 20px;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+}
+
+#next-button {
+    position: absolute;
+    width: 0; 
+    height: 0; 
+    top: 50%;
+    right: -5%;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 40px solid #ffc52a;
+}
+
+#prev-button {
+    position: absolute;
+    width: 0; 
+    height: 0; 
+    top: 50%;
+    left: -5%;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-right: 40px solid #ffc52a;
+}
+
+.textwidget .juicer-feed.slider .slick-prev, .textwidget .juicer-feed.slider .slick-next {
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 40px solid #ffc52a;
+    width: 0;
+    height: 0;
+    padding: 0;
+    background-color: initial;
+}
+
+.textwidget .juicer-feed.slider .slick-prev, .textwidget .juicer-feed.slider .slick-next {
+    z-index: 3;
+}
+
+.textwidget .juicer-feed.slider .slick-prev {
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
+    margin-left: 10px;
+}
+
+.textwidget .juicer-feed.slider .slick-next {
+    margin-right: 10px;
+}
+
+.textwidget .juicer-feed.slider .slick-next:before,
+.textwidget .juicer-feed.slider .slick-prev:before {
+    content: none;
+}
+
+
+/* CLIENT/PARTNER/CONTACT/PRODUCT Page */
+
+.page-template-page-extra .site-content {
+    margin-top: 50px;
+}
+
+.entry-content-page {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 30px 0 30px;
+}
+
+.page-template-page-extra address {
+    color: #303030;
+    text-align: center;
+}
+
+.page-template-page-extra address .bp-opening-hours {
+    margin: 0 auto;
+    text-align: left;
+}
+
+.page-template-page-extra .wpcf7 {
+    text-align: center;
+}
