--- a/src/assets/scss/components/_dividers.scss
+++ b/src/assets/scss/components/_dividers.scss
@@ -2,3 +2,15 @@
   border-style: dashed;
   margin: 2rem 0;
 }
+
+@mixin yellow-line-center {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 300px;
+  height: 8px;
+  background-color: #ffc52a;
+}
