--- a/src/assets/scss/templates/_home.scss
+++ b/src/assets/scss/templates/_home.scss
@@ -1,129 +1,85 @@
-.site-banner-content {
+// ====================================
+// Description
 
-    .site-banner-media {
-        // @include xy-grid();
-        @include xy-gutters($gutter-position: top left right);
-        height: calc(100vh - #{$navHeight});
-        position: relative;
-        overflow: hidden;
-        border: 4px solid #E6E6E6;
+.shadow-box.main-container {
+    position: relative;
 
-        .banner-video, .video-ended-poster {
-            object-fit: cover;
-            object-position: 20% 20%;
-            position: absolute;
-            height: 100vh;
-            width: 100vw;
-            z-index: -1;
-        }
+    &::before,
+    &::after {
+        position: absolute;
+        display: block;
+        content: "";
+        border-radius: 100%;
+        width: 90%;
+        height: 10px;
+        box-shadow: 0px -2px 15px rgba(48,48,48, 0.1);
+        right: 50%;
+        transform: translateX(50%);
+    }
 
-        .grids {
-            position: absolute;
-            object-fit: cover;
-            object-position: 0 0;
-            z-index: -1;
-            width: 200%;
-            max-width: initial; 
-            min-height: 200%;
-        }
+    &::before {
+        top: 0;
+    }
 
-        .mobile {
-            display: none;
-        }
+    &::after {
+        bottom: 0;
+        box-shadow: 0px 2px 15px rgba(48,48,48, 0.1);
+    }
 
-        .site-banner-header-container {
-            @include flex;
-            @include flex-align($x: right);
-            margin-right: 10%;
+    .description-container {
+        margin-top: 20vh;
+        margin-bottom: 10vh;
+    }
+}
 
-            .site-banner-header {
-                @include flex;
-                @include flex-direction(column);
-                background-color: rgba(255,255,255,1);
-                text-align: center;
-                font-variant: small-caps;
-                color: black;
-                position: relative;
+.header-container {
+    text-align: center;
+}
 
-                .header-background {
-                    height: 200px;
-                    bottom: 0;
-                    position: absolute;
-                    width: 100%;
-                    opacity: 1;
-                    transform: translateY(100%);
 
-                    svg {
-                        width: 100%;
-                        height: 100%;
-                            polygon {
-                                &:first-child {
-                                    fill: white;
-                                }
-                                &:nth-child(2) {
-                                    fill: $light-gray;
-                                    transform: translateY(10%);
-                                }
-                            }
-                    }
-                }
-                
-                .banner-title {
-                    position: relative;
-                    padding-bottom: 20px;
-                    margin-bottom: 20px;
-                    line-height: 1.5em;
-                    font-size: 1.5em;
-                    padding: 0 20px 40px 20px;
+// ====================================
+// Main Products
 
-                    &:after {
-                        @include yellow-line-center();
-                    }
-                }
+.products {
+    position: relative;
+    overflow: hidden;
 
-                strong {
-                    margin-bottom: 40px;
-                    font-size: 1.2rem;
-                }
-
-                a {
-                    width: 50%;
-                    margin: 0 auto;
-                    margin-bottom: 20px;
-                }
-            }
-
-            .header-promo {
-                @include flex;
-                @include flex-direction(column);
-                position: absolute;
-                bottom: 0;
-                right: 0;
-                background-color: black;
-                color: $light-gray;
-                padding: 20px;
-                font-size: 0.7rem;
-
-                a {
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                }
-
-                img {
-                    width: 150px;
-                    height: auto;
-                }
-            }
-        }
+    &.image-main {
         
+        background-position: 50% 0%;
+        max-height: 75vh;
+
+        @include breakpoint(medium) {
+            background-attachment: fixed;
+        }
     }
 
-    .site-banner-header {
+    .grids {
+        z-index: 0;
+    }
+    
+    .products-container {
+        @include flex;
+        @include flex-align($x: center);
+        height: 100%;
 
+        img {
+            padding: 40px 0;
+        }
     }
 
-    .header.promo {
+    &.description-container {
 
+        & > div {
+            @include xy-grid-container;
+        }
     }
+}
+
+// ====================================
+// Main Products
+
+.other-products {
+    @include xy-grid-container(1400px);
+    // check card.scss for rest
 }
